<resources>
    <string name="app_name">Kwartracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Login Screen
    <string name="lbl_k">k</string>
    <string name="lbl_kwartracker">kwartracker</string>
    <string name="lbl_welcome">Welcome\nBack</string>
    <string name="lbl_email">Email</string>
    <string name="hint_email"><i>Enter email address</i></string>
    <string name="lbl_password">Password</string>
    <string name="hint_password"><i>Enter email address password</i></string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_sign_in_google">Sign in with google</string>
    <string name="lbl_recover_password"><u>Recover password</u></string>
    <string name="lbl_sign_in_guest"><u>Sign in as guest</u></string>
    <string name="lbl_no_account_yet">No account yet?</string>
    <string name="lbl_sign_up"><u>Sign Up</u></string>
    <string name="lbl_or">or</string>

    // Sign Up
    <string name="lbl_create_naccount">Create\nAccount</string>
    <string name="lbl_enter_password"><i>Enter Password</i></string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_already_have_an_account">Already have an account?</string>

    //Titles
    <string name="title_my_wallets">My Wallets</string>
    <string name="title_edit_wallet">Edit Wallet</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_view_all"><u>View All</u></string>
    <string name="title_settings">Settings</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_login_security">Log in and Security</string>
    <string name="title_category_name">Category Name</string>
    <string name="title_reports">Reports</string>
    <string name="title_target_amount">to target amount</string>
    <string name="title_target_date">to target date</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_savings">Savings</string>

    // Profile
    <string name="lbl_sample_name">Jupilot D. Great</string>
    <string name="lbl_contact_number">Contact number</string>
    <string name="lbl_birthdate">Birthdate</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_sample_number">09123456789</string>
    <string name="lbl_sample_birthdate">January 01, 1998</string>
    <string name="lbl_sample_address">2F ESY Bldg, corner Ma Cristina St and Juana Osmeña St, Cebu City, Cebu, Philippines 6000</string>
    <string name="lbl_change_photo">Change photo</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_last_name">Last name</string>
    <string name="lbl_first_name">First name</string>
    <string name="hint_last_name">Enter last name</string>
    <string name="hint_first_name">Enter first name</string>
    <string name="hint_contact_number">Enter contact number</string>
    <string name="hint_address">Enter address</string>

    // Transactions
    <string name="title_transaction">Transaction</string>
    <string name="title_add_transaction">Add Transaction</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_default_date_range">Default Date Range</string>
    <string name="lbl_date_range">Date Range</string>
    <string name="lbl_wallet_type">Wallet Type</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_apply">Apply</string>
    <string name="lbl_transaction_type">Transaction Type</string>
    <string name="lbl_income">Income</string>
    <string name="lbl_spent_with">Spent with</string>
    <string name="lbl_transaction_date">Transaction Date</string>
    <string name="lbl_added_to_wallet">Added to Wallet</string>
    <string name="lbl_transaction_image">Transaction Image</string>
    <string name="lbl_which_wallet_do_you_want_to_add">Which wallet do you want to add?</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_enter_amount">Enter Amount</string>
    <string name="lbl_peso_sign">₱</string>
    <string name="lbl_default_decimal_value">00.00</string>
    <string name="lbl_default_amount_value">₱10,000.00</string>
    <string name="lbl_transaction_name">Transaction name</string>
    <string name="lbl_select_date">Select date range</string>
    <string name="lbl_dd_mm_yyyy">DD / MM / YYYY</string>
    <string name="lbl_spent_with_this_person">Spent with this person</string>
    <string name="lbl_browse">Browse</string>
    <string name="lbl_bpi_savings">BPI Savings</string>
    <string name="lbl_transaction_amount">Transaction amount</string>
    <string name="lbl_salary">Salary</string>
    <string name="lbl_date_value">15 / 02 / 2021</string>
    <string name="lbl_person_name_value">Juan Dela Cruz</string>
    <string name="lbl_receipt_filename">receipt101020.jpg</string>
    <string name="btn_replace">Replace</string>
    <string name="btn_upload_photo">Upload photo</string>
    <string name="hint_select_wallet_to_add">Select wallet to add</string>
    <string name="hint_select_transaction_type">Select transaction type</string>
    <string name="hint_select_category">Select Category</string>
    <string name="hint_enter_name_with_person">Enter name with person</string>

    <!-- Navigation Drawer Items -->
    <string name="menu_home">Home</string>
    <string name="menu_transaction">Transaction</string>
    <string name="menu_wallet">Wallets</string>
    <string name="menu_report">Reports</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_setting">Settings</string>

    // Settings
    <string name="btn_login_security">Login and Security</string>
    <string name="btn_categories">Categories</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="lbl_wallet_name">Wallet Name</string>
    <string name="title_add_wallet">Add Wallet</string>
    <string name="hint_wallet_name">Enter wallet name</string>
    <string name="lbl_currency">Currency</string>
    <string name="hint_wallet_currency">Select wallet currency</string>
    <string name="hint_wallet_type">Select wallet type</string>
    <string name="message_inclue_overall">Include in overall total balance?</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>

    // Log in and Security
    <string name="lbl_login_security">LoginSecurityFragment</string>
    <string name="lbl_email_address">Email address</string>
    <string name="lbl_sample_email">email_email_email@emailemail.com</string>
    <string name="btn_change_password">Change Password</string>

    // Change Password
    <string name="lbl_change_password">ChangePasswordFragment</string>
    <string name="lbl_new_password">New password</string>
    <string name="lbl_confirm_new_password">Confirm new password</string>
    <string name="hint_enter_new_password"><i>Enter new password</i></string>
    <string name="hint_enter_again_new_password"><i>Enter again new password</i></string>

    // Category Detail
    <string name="lbl_parent_category">Parent category</string>
    <string name="lbl_sample_category_name">Parent Category Name</string>
    <string name="lbl_this_month">This month</string>
    <string name="lbl_this_week">This week</string>
    <string name="lbl_all_wallet">All wallet</string>
    <string name="lbl_select_category">Select category</string>
    <string name="lbl_edit">Edit</string>

    //Confirmation Dialog
    <string name="title_confirmation">Confirmation</string>
    <string name="lbl_are_you_sure">Are you sure?</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_message_delete">Are you sure you want to delete this?</string>
    <string name="lbl_deleted">Deleted</string>
    <string name="lbl_confirmed_delete_message">It has been successfully deleted.</string>
    <string name="lbl_exit">Exit</string>
    <string name="lbl_confirmed">Confirmed</string>
    <string name="lbl_confirmed_successfully">Confirmed successfully.</string>
    <string name="lbl_success">Success</string>
    <string name="lbl_confirmed_success_message">Your transaction has been added!</string>
    <string name="lbl_cool">Cool</string>

    <!-- Validation -->
    <string name="validation_required">Please enter %s.</string>
    <string name="validation_email_taken">Email already taken. Please try a different email.</string>
    <string name="validation_tel">Please enter a valid Tel number.</string>
    <string name="validation_maxlength">%1$s has to be up to %2$d characters long.</string>
    <string name="validation_range">%1$s has to be from %2$d to %3$d characters long.</string>
    <string name="validation_password">Please enter your password.</string>
    <string name="validation_email_required">Please enter your email address.</string>
    <string name="validation_email">Please enter a valid email address.</string>


    // Reports Dashboard
    <string name="lbl_date_select">Select date</string>
    <string name="lbl_net_income">Net Income</string>
    <string name="lbl_income_expense">Income and Expense</string>
    <string name="lbl_balance">Balance</string>
    <string name="lbl_expenses">Expenses</string>
    <string name="lbl_income_category">Income by Category</string>
    <string name="lbl_expenses_category">Expenses by Category</string>
    <string name="lbl_wallet_balance">Wallet Balance</string>
    <string name="sample_net_income">₱ 35,000.00</string>
    <string name="sample_balance">₱ 40,000.00</string>
    <string name="sample_expense">₱ 5,000.00</string>
    <string name="sample_wallet_balance">₱ 00,000.00</string>
    <string name="sample_date">March 01, 2021 - March 7, 2021</string>
    <string name="sample_percentage">000%</string>
</resources>