<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/transactionFragment"
            android:title="@string/menu_transaction" />
        <item
            android:id="@+id/walletFragment"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/reportFragment"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/profileFragment"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/settingFragment"
            android:title="@string/menu_setting" />
    </group>
</menu>