<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/transactionFragment"
        android:icon="@drawable/ic_transactions"
        android:title="@string/menu_transaction" />
    <item
        android:id="@+id/walletFragment"
        android:icon="@drawable/ic_wallets"
        android:title="@string/menu_wallet" />
    <item
        android:id="@+id/reportFragment"
        android:icon="@drawable/ic_reports"
        android:title="@string/menu_report" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_my_profile"
        android:title="@string/menu_profile" />
    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_setting"
        android:title="@string/menu_setting" />
</menu>