<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/round_white"
            android:gravity="center"
            android:text="@string/lbl_k"
            android:textColor="@color/app_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_kwartracker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/lbl_kwartracker"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="29dp"
            android:background="@drawable/bg_white_round_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:id="@+id/text_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="59dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/lbl_welcome"
                android:textColor="@color/black"
                android:textSize="42sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/lbl_email"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/text_welcome"
                app:layout_constraintTop_toBottomOf="@+id/text_welcome" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edittext_bg_round_corner"
                android:elevation="18dp"
                android:ems="10"
                android:hint="@string/hint_email"
                android:autofillHints="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="14dp"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_email"
                app:layout_constraintTop_toBottomOf="@+id/text_email" />

            <TextView
                android:id="@+id/text_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/lbl_password"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/input_email"
                app:layout_constraintTop_toBottomOf="@+id/input_email" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_bg_round_corner"
                android:elevation="18dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:autofillHints="@string/hint_password"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/input_email"
                app:layout_constraintStart_toStartOf="@+id/text_password"
                app:layout_constraintTop_toBottomOf="@+id/text_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/edittext_bg_round_corner"
                android:text="@string/btn_sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/app_color"
                app:layout_constraintEnd_toEndOf="@+id/input_password"
                app:layout_constraintStart_toStartOf="@+id/input_password"
                app:layout_constraintTop_toBottomOf="@+id/input_password" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lbl_or"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/button_sign_in"
                app:layout_constraintStart_toStartOf="@+id/button_sign_in"
                app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_google_sign_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/edittext_bg_round_corner"
                android:gravity="center"
                android:text="@string/btn_sign_in_google"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:icon="@drawable/ic_gmail"
                app:iconGravity="textStart"
                app:iconPadding="12dp"
                app:iconSize="18dp"
                app:layout_constraintEnd_toEndOf="@+id/button_sign_in"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/button_sign_in"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/text_recover_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/lbl_recover_password"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="@+id/button_google_sign_in"
                app:layout_constraintTop_toBottomOf="@+id/button_google_sign_in" />

            <TextView
                android:id="@+id/text_guest_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/lbl_sign_in_guest"
                android:textColor="@color/gray"
                app:layout_constraintEnd_toEndOf="@+id/button_google_sign_in"
                app:layout_constraintTop_toBottomOf="@+id/button_google_sign_in" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/line_gray_stroke"
                app:drawableTint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_recover_password" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/lbl_no_account_yet"
                android:textColor="@color/dark_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_sign_up"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/text_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/lbl_sign_up"
                android:textColor="@color/app_color"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView10" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
